# stag

./: .gitignore  .ignore  Cargo.toml  README.md  dev.sh
src/: autotag.rs  main.rs  tagstore.rs
src/cmd/: cmd.rs  handlers.rs  mod.rs  utils.rs
src/sql/queries/: get_file_tags.sql  list_tags.sql  remove_tags.sql
src/sql/schema/: init.sql
src/sql/templates/: exclude_clause.sql  search_query.sql
tests/: cli.rs
