[package]
name = "stag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
directories = "6.0.0"
ignore = "0.4.23"
mime_guess = "2.0.5"
rusqlite = { version = "0.33.0", features = ["bundled"] }
tempfile = "3.15.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
serial_test = "3.2.0"
